--- a/BloodBankMVC/Web.config
+++ b/BloodBankMVC/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="BloodBank" connectionString="Server=DESKTOP-0M47JEA;Database=BloodBank;Trusted_Connection=True;" />
-    <add name="BloodBankEntities" connectionString="metadata=res://*/Models.Search.csdl|res://*/Models.Search.ssdl|res://*/Models.Search.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-0M47JEA;initial catalog=BloodBank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BloodBank" connectionString="Server=DESKTOP-LGAUCCC\SQLEXPRESS;Database=BloodBank;Trusted_Connection=True;" />
+    <add name="BloodBankEntities" connectionString="metadata=res://*/Models.Search.csdl|res://*/Models.Search.ssdl|res://*/Models.Search.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LGAUCCC\SQLEXPRESS;initial catalog=BloodBank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
